Board lane improvements